Add workaround for dynamic model+material spawning problems

...that are caused by Qt3DCore as described in QTBUG-69352.

This makes the primitive() command of the console work as expected,
with the spawned models showing up just fine as the renderable submesh
entities are not filtered away anymore due incorrect Layer component
bookkeeping.

Change-Id: Idb46fcc120f40619b5966d7e46f527af291e7550
Reviewed-by: Andy Nichols <andy.nichols@qt.io>